<resources>
    <string name="localhost">http://10.0.2.2:8080/</string>
    <string name="server">http://118.47.184.245:8080/</string>

    <string name="app_name">스마켓</string>
    <string name="test">hello</string>
    <string name="longTest">Hello</string>
    <string name="longTest2">Good to see you</string>
    <string name="longTest3">Nice to meet you</string>
    <string name="lowpriceTag">최저가</string>
    <string name="lowprice">33,000</string>
    <string name="MallName">판매처 : OOO</string>
    <string name="priceDifference"> 500 </string>
    <string name="detailTab1">뉴스</string>
    <string name="detailTab2">상세보기</string>
    <string name="detailTab3">영상보기</string>
    <string name="detailTab4">리뷰</string>
    <string name="authEndpoint"> http://118.47.184.245:8080/api/auth </string>
    <string name="usersEndpoint"> http://118.47.184.245:8080/api/users </string>
    <string name="bookmarksEndpoint">http://118.47.184.245:8080/api/bookmarks</string>
    <string name="fcmEndpoint"> http://118.47.184.245:8080/api/fcm </string>
    <string name="crawlingEndpoint">http://118.47.184.245:8080/api/crawling </string>
    <string name="naverEndpoint"> http://118.47.184.245:8080/api/naver </string>
    <string name="detailEndpoint">http://118.47.184.245:8080/api/item/detail?query=</string>
    <string name="youtubeEndpoint"> http://118.47.184.245:8080/api/youtube </string>
<!--    <string name="authEndpoint"> http://10.0.2.2:3000/api/auth </string>-->
<!--    <string name="usersEndpoint"> http://10.0.2.2:3000/api/users </string>-->
<!--    <string name="bookmarksEndpoint">http://10.0.2.2:3000/api/bookmarks</string>-->
<!--    <string name="fcmEndpoint"> http://10.0.2.2:3000/api/fcm </string>-->
<!--    <string name="crawlingEndpoint"> http://10.0.2.2:3000/api/crawling </string>-->
<!--    <string name="naverEndpoint"> http://10.0.2.2:3000/api/naver </string>-->
<!--    <string name="detailEndpoint">http://10.0.2.2:3000/api/item/detail?query=</string>-->
<!--    <string name="youtubeEndpoint"> http://10.0.2.2:3000/api/youtube </string>-->
    <string name="reviewTitle">리뷰제목</string>
    <string name="reviewContent">리뷰내용입니다 가나다라마바사아자차카타파하 abcdefghijklmnopqrxtuvwxyz</string>
    <string name="reviewUser">리뷰사용자</string>
    <string name="reviewScore">100점</string>
    <string name="reviewMall">리뮤몰</string>
    <string name="reviewDate">2020.01.01</string>
    <string name="newsTitle">[전문가 리뷰]이거  아는 사람 있음? 진짜 쉬운 아이폰 꿀팁… 메모앱 100% 활용하는 방법 총정리</string>
    <string name="newsUser">TongTongTv</string>
    <string name="newsHit">5,655</string>
    <string name="newsDate">20/03/16</string>
    <string name="title_activity_newsearch_fragment">newsearch_fragment</string>
    <string name="title_activity_newbookmark_fragment">newbookmark_fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
